--- a/index.html
+++ b/index.html
@@ -4,17 +4,19 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Doc Example</title>
+  <title>Website Example</title>
 </head>
 
 
 <body>
-  <p> Coding is awesome. Learn today long life coding skills!
+  <p> Coding is awesome. Learn today long life coding skills! 
   <p>
 
   <p>Awesome possum skills for everyone to enrich their knowledge
   </p>
 
+<h1>National Puppy Appreciation Day</h1>
+<img src="./images/puppyteacup.jpeg" alt="puppyteacup" width="550" height="550">
 </body>
 
 </html>
